TEC-62  Update logic ConferenceService and Session
The logic has been created for attending conferences and creating a session with filling in basic data